--- a/views/partials/base_container.hbs
+++ b/views/partials/base_container.hbs
@@ -33,7 +33,7 @@
             <li>
                 <i class="fas fa-cog"></i>
 
-                <a href="login" class="button">Log Out</a>
+                <a href="/auth/logout" class="button">Log Out</a>
             </li>
 
         </ul>
