added models and ERD

--- a/views/partials/base_container.hbs
+++ b/views/partials/base_container.hbs
@@ -13,22 +13,22 @@
             <li>
                 <i class="fas fa-book-open"></i>
 
-                <a href="restaurants" class="button">Category</a>
+                <a href="/" class="button">Category</a>
             </li>
             <li>
                 <i class="fas fa-map-marked-alt"></i>
 
-                <a href="map" class="button">Map</a>
+                <a href="/restaurants/map" class="button">Map</a>
             </li>
             <li>
                 <i class="fas fa-bell"></i>
 
-                <a href="notification" class="button">Notification</a>
+                <a href="/restaurants/notification" class="button">Notification</a>
             </li>
             <li>
                 <i class="fas fa-history"></i>
 
-                <a href="order_history" class="button">Order History</a>
+                <a href="/restaurants/order_history" class="button">Order History</a>
             </li>
             <li>
                 <i class="fas fa-cog"></i>
