--- a/views/add_restaurant.hbs
+++ b/views/add_restaurant.hbs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/projects.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/projects.css">
 
     <script src="https://kit.fontawesome.com/723297a893.js" crossorigin="anonymous"></script>
     <title>Add Restaurant</title>
@@ -14,7 +14,7 @@
         {{>header}}
         <section class="project-form">
             <h1>UPLOAD</h1>
-            <form action="add_restaurant" method="POST" ENCTYPE="multipart/form-data">
+            <form action="add" method="POST">
                 <div class="messages">
                 
                 </div>
@@ -22,7 +22,7 @@
                 <textarea name="description" rows=5 placeholder="description"></textarea>
                 <input name="lat" type="float" placeholder="lat">
                 <input name="lng" type="float" placeholder="lng">
-                <input type="file" name="file"/><br/>
+                <input name="img" type="file" /><br/>
                 <button type="submit">send</button>
             </form>
         </section>
