added map.js and map.hbs

--- a/views/map.hbs
+++ b/views/map.hbs
@@ -12,8 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../css/map.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmpV02FM9Db8_lyJv8twobQ6o1U4v-3yc&callback=initMap&libraries=&v=weekly"
-            defer
+            src={{process.env.GOOGLE_API}}
     ></script>
 
     <title>MAP</title>
